[package]
name = "blackout"
version = "0.1.0"
edition = "2021"
authors = ["iqbal-19"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.8"
worker-macros = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
uuid = "1.8"

tokio = { version = "1", features = ["io-util", "rt"] }
sha2 = "0.10"
md-5 = "0.10"
