[package]
name = "xxxdamn"
version = "0.1.0"
edition = "2021"
authors = ["iqbal-19"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.8"
worker-macros = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
uuid = "1.8"

tokio = { version = "1", features = ["io-util", "rt"] }
sha2 = "0.10"
md-5 = "0.10"

bytes = "1"
futures-util = "0.3"
pin-project-lite = "0.2"
anyhow = "1"
aes = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
once_cell = "1"
pretty-bytes = "0.2"
regex = "1"
serde_json = "1"
